Updated service dependencies and plugins

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,17 @@
+# Copyright 2025 HM Revenue & Customs
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 include "frontend.conf"
 
 appName = "low-earners-pensions-payment-frontend"
@@ -14,6 +28,14 @@ play.http.errorHandler = "uk.gov.hmrc.lowearnerspensionspaymentfrontend.config.E
 # Play Modules
 play.modules.enabled += "uk.gov.hmrc.lowearnerspensionspaymentfrontend.Module"
 
+# Session configuration
+# ~~~~~
+play.http.session.httpOnly = true
+
+play.http.session.secure = false
+
+play.http.session.cookieName = "mdtp"
+
 microservice {
   services {
     contact-frontend {
@@ -21,18 +43,29 @@ microservice {
       host = localhost
       port = 9250
     }
+
+    auth {
+      protocol = http
+      host     = localhost
+      port     = 8500
+    }
+    mpe-backend {
+      protocol = http
+      host     = localhost
+      port     = 7504
+    }
   }
 }
 
 play.i18n.langCookieHttpOnly: "true"
 
 # Change this value to true to enable Welsh translations to be loaded from messages.cy, and to display the language toggle
-features.welsh-language-support = false
+features.welsh-language-support = true
 
 # Replace play.i18n.langs with the commented out line below when your service has been fully translated into Welsh
 # to enable Welsh translations for all content, including the standard headers and footers.
 # play.i18n.langs = ["en", "cy"]
-play.i18n.langs = ["en"]
+play.i18n.langs = ["en", "cy"]
 
 # To integrate with tracking-consent-frontend, uncomment and update the
 # gtm.container property below to be one of a, b, c, d, e, f or sdes
